# palbreed

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
dataFormatter/: generateBreedingData.mjs  generatePassives.mjs  generateSaveAliases.mjs  notes.md  output.json  runIt.js
dataFormatter/dataIn/: palData.json  pics.json  uniqueCombos.json
docs/: architecture.md  data-contract.md  deployment-setup.md  inventory-architecture.md  scale-accounts-ads-plan.md  scale-accounts-plan.md
public/: site.webmanifest
src/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
src/components/: GenderBadge.tsx  LineageStep.tsx  OwnedPalSelect.tsx  PalAvatar.tsx  PalPicker.tsx  PalSelect.tsx  PalSelector.tsx  PassiveSelector.tsx  StatusBanner.tsx  palPickerUtils.ts
src/config/: runtimeConfig.test.ts  runtimeConfig.ts
src/data/: breeding-runtime-1.0.json  breedingRepository.test.ts  breedingRepository.ts  breedingRuntime.ts  passiveRepository.test.ts  passiveRepository.ts  passives-runtime-1.0.json  save-pal-aliases-1.0.json
src/domain/: account.ts  inventory.ts  pal.ts  passive.ts  saveImport.ts
src/features/: navigationSearch.test.ts
src/logic/: breedingCalc.ts
src/routes/: __root.tsx  account.tsx  builder.tsx  index.tsx  inventory.tsx  legal.tsx  pair.tsx  privacy.tsx  tools.tsx
supabase/: config.toml
tools/: generate_brand_assets.py
tools/save-parser/: Cargo.toml  LICENSES.md
tools/save-parser/src/: lib.rs
(+72 files in other folders)
